# tauri

./: .eslintignore  .gitignore  .license_template  .npmignore  .prettierignore  .prettierrc  .prettierrc.js  .taurignore  ARCHITECTURE.md  Ai-virtual-mouse.py  Cargo.toml  Cross.toml  LICENSE  LICENSE.spdx  LICENSE_MIT  Package.swift  README-zh_CN.md  README.md  READMes.md  SECURITY.md  check-license-header.js  dependabot.yml  jest.config.js  maskfile.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  renovate.json  rust-toolchain  rustfmt.toml  taplo.toml  tauri.conf.js  voice assistant
bench/: Cargo.toml  README.md
bench/src/: build_benchmark_jsons.rs  run_benchmark.rs  utils.rs
bindings/rust/: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
bindings/rust/bundle/: Cargo.toml  License_Apache.md
bindings/rust/cargo-bundle/: Cargo.toml  License_MIT.md  Readme.md
bindings/rust/proton-sys/: Cargo.toml  build.rs  lib.rs  proton.c
bindings/rust/src/: color.rs  dialog.rs  error.rs  escape.rs  lib.rs
bindings/rust/tauri-sys/: Cargo.toml  build.rs  lib.rs  tauri.c
bindings/rust/webview-sys/: Cargo.toml  build.rs
cli/: .gitignore  Cargo.toml  build.rs
cli/api-definitions/: .eslintrc.js
cli/api-definitions/src/: fs.ts
cli/bindings/tauri.js/: .eslintrc.js  .gitignore  jest.config.js  package.json  tsconfig.api.json  webpack.config.js
cli/core/: Cargo.toml  build.rs  config_definition.rs  schema.json
cli/core/src/: build.rs  cli.yml  dev.rs  info.rs  init.rs  main.rs  sign.rs
cli/create-tauri-app/: .gitignore  package.json  readme.md  tsconfig.json
cli/create-tauri-app/src/: dependency-manager.ts  index.ts  install.ts  shell.ts
cli/src/: build.rs  cli.yml  dev.rs  init.rs  main.rs
cli/src/helpers/: app_paths.rs  config.rs  logger.rs  manifest.rs  mod.rs  tauri_html.rs
cli/src/templates/: tauri.js
cli/tauri-bundler/: CHANGELOG.md  Cargo.toml  README.md  Readme.md
cli/tauri-bundler/src/: bin.rs  bundle.rs  error.rs  lib.rs  main.rs  sign.rs
cli/tauri-cli/: Cargo.toml
cli/tauri-cli/src/: bundle.rs  main.rs  platform.rs
cli/tauri.js/: .eslintignore  .eslintrc.js  .gitignore  .npmignore  .prettierrc.js  CHANGELOG.md  LICENSE  README.md  api.js  babel.config.js  entry.js  jest.config.js  package.json  rollup.config.js  runner.js  template.js  tsconfig.json  webpack.config.js
cli/tauri.js/api/: build.js  cli.ts  dev.js  dialog.js  dialog.ts  event.js  fs.js  fs.ts  global-shortcut.js  http.js  http.ts  index.ts  init.js  process.js  process.ts  tauri.js  tauri.ts  tauricon.js  window.js  window.ts
cli/tauri.js/api-src/: bundle.ts  cli.ts  dialog.ts  event.ts  fs.ts  global-shortcut.ts  http.ts  index.ts  notification.ts  path.ts  process.ts  tauri.ts  tsconfig.json  window.ts
cli/tauri.js/helpers/: app-paths.js  build.js  copy-templates.js  dev.js  logger.js  spawn.js  tauri-config.js  tauricon.js
cli/tauri.js/scripts/: is-admin.ps1  rustup-init.sh  rustup-install.ps1
cli/tauri.js/src/: entry.ts  generator.ts  runner.ts  template.ts
cli/tauri.js/templates/: mutation-observer.js  tauri.conf.js  tauri.esm.js  tauri.js  updater.rs
cli/tauri.js/webpack/: index.js
core/config-schema/: Cargo.toml  build.rs  schema.json
core/tauri/: CHANGELOG.md  Cargo.toml  README.md  Windows Manifest.xml  build.rs
core/tauri-build/: CHANGELOG.md  Cargo.toml  README.md
core/tauri-build/src/: acl.rs  allowlist.rs  config.rs  lib.rs  manifest.rs  mobile.rs  plugin.rs  static_vcruntime.rs  window-app-manifest.xml
core/tauri-build/templates/: Package.swift
core/tauri-codegen/: CHANGELOG.md  Cargo.toml  README.md
core/tauri-config-schema/: Cargo.toml  build.rs  schema.json
core/tauri-macros/: CHANGELOG.md  Cargo.toml  README.md
core/tauri-plugin/: CHANGELOG.md  Cargo.toml
core/tauri-runtime/: CHANGELOG.md  Cargo.toml  README.md  build.rs
core/tauri-runtime-wry/: CHANGELOG.md  Cargo.toml  README.md  build.rs
core/tauri-updater/: Cargo.toml
core/tauri-utils/: CHANGELOG.md  Cargo.toml  README.md
crates/tauri-bundler/: CHANGELOG.md  Cargo.toml  License_MIT.md
crates/tauri-driver/: CHANGELOG.md  Cargo.toml  LICENSE.spdx  LICENSE_MIT  README.md
crates/tauri-macos-sign/: CHANGELOG.md  Cargo.toml  README.md
tauri/: CHANGELOG.md  Cargo.toml  build.rs  includedir_codegen.rs  injector.js  lib.js  runner.js  template.html
tauri-api/: CHANGELOG.md  Cargo.toml  build.rs  old_build.rs
tauri-api/.scripts/: loop_qc.sh
tauri-api/src/: app.rs  assets.rs  cli.rs  command.rs  config.rs  dialog.rs  dir.rs  error.rs  file.rs  http.rs  lib.rs  notification.rs  path.rs  rpc.rs  shell.rs  shortcut.rs  shortcuts.rs  tcp.rs  version.rs
tauri-api/test/: test_binary
tauri-config/: Cargo.toml
tauri-config-derive/: Cargo.toml
tauri-config-derive/src/: lib.rs
tauri-config/src/: lib.rs
tauri-macros/: Cargo.toml
tauri-macros/src/: command.rs  error.rs  expand.rs  include_dir.rs  lib.rs
tauri-update/: Cargo.toml
tauri-update/src/: lib.rs  updater.rs
tauri-updater/: Cargo.toml  README.md
tauri-updater/examples/: update.rs
tauri-updater/src/: error.rs  errors.rs  http.rs  lib.rs  macros.rs  platform.rs  updater.rs
tauri-utils/: Cargo.toml  cargo.toml
tauri-utils/src/: assets.rs  config.rs  lib.rs  platform.rs  process.rs
tauri/builder/: cargo.toml
tauri/helpers/: app-paths.js  generator.js  logger.js  tauri-config.js
tauri/lib/: Cargo.toml  build.rs
tauri/lib/src/: lib.rs  (+2 more)
tauri/scripts/: bundle.js
tauri/src/: api.rs  app.rs  assets.rs  async_runtime.rs  cli.rs  config.rs  dir.rs  endpoints.rs  error.rs  event.rs  extension.rs  file_system.rs  hooks.rs  lib.rs  pid.rs  plugin.rs  rpc.rs  runtime.rs  salt.rs  server.rs  settings.rs  tcp.rs  updater.rs  webview.rs
tauri/tauri-build/: Cargo.toml
tauri/updater/: cargo.toml
ui/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  proton.h  proton_test.cc  tauri-cocoa-webview.h  tauri-cocoa.m  tauri-edge.cc  tauri-edge.cpp  tauri-edge.h  tauri-gtk-webview.h  tauri-gtk.c  tauri-windows-webview.h  tauri-windows.c  tauri.h  tauri_test.cc
(+5600 files in other folders)
