[workspace]
resolver = "2"
members = [
  # core
  "core/tauri",
  "core/tauri-runtime",
  "core/tauri-runtime-wry",
  "core/tauri-macros",
  "core/tauri-utils",
  "core/tauri-build",
  "core/tauri-codegen",
  "core/tauri-config-schema",
  "core/tauri-acl-schema",
  "core/tauri-plugin",

  # integration tests
  "core/tests/restart",
  "core/tests/acl",

  # examples
  "examples/file-associations/src-tauri",
  "examples/api/src-tauri",
]

exclude = [
  # examples that need to be compiled with the tauri CLI
  "examples/api/src-tauri",
  "examples/resources/src-tauri",
  "examples/web/core",
  "examples/file-associations/src-tauri",
  "examples/workspace",
  "examples/plugins/tauri-plugin-example",
]

[workspace.package]
authors = ["Tauri Programme within The Commons Conservancy"]
homepage = "https://tauri.app/"
repository = "https://github.com/tauri-apps/tauri"
categories = ["gui", "web-programming"]
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.70"

# default to small, optimized workspace release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

# Temporary patch to schemars to preserve newlines in docstrings for our reference docs schemas
# See https://github.com/GREsau/schemars/issues/120 for reference
[patch.crates-io]
schemars_derive = { git = 'https://github.com/tauri-apps/schemars.git', branch = 'feat/preserve-description-newlines' }
