workspace = {}

[package]
name = "tauri-cli"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas@tauri.studio>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
anyhow = "1.0"
tauri-bundler = { path = "./tauri-bundler" }
term = "0.6"
once_cell = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inline_assets = "0.4"
kuchiki = "0.8"
html5ever = "0.25"