[package]
name = "tauri-api"
version = "0.7.4"
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>"
]
categories = [ "gui", "os", "filesystem", "web-programming" ]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Make tiny, secure apps for all desktop platforms with Tauri"
edition = "2018"
exclude = [ "test/fixture/**" ]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_repr = "0.1"
dirs = "3.0.1"
zip = "0.5.8"
semver = "0.11"
tempfile = "3"
either = "1.6.1"
tar = "0.4"
flate2 = "1"
anyhow = "1.0.33"
thiserror = "1.0.21"
rand = "0.7"
nfd = "0.0.4"
tauri-dialog = "0.1.0"
attohttpc = { version = "0.16.0", features = [ "json", "form" ] }
http = "0.2"
tauri-utils = { version = "0.5", path = "../tauri-utils" }
clap = { git = "https://github.com/clap-rs/clap", rev = "1a276f8", version = "3.0.0-beta.1", optional = true }
notify-rust = { version = "4.0.0", optional = true }
once_cell = "1.4.1"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[features]
cli = [ "clap" ]
notification = [ "notify-rust" ]
