[package]
name = "tauri-api"
version = "0.7.5"
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>"
]
categories = [ "gui", "os", "filesystem", "web-programming" ]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Make tiny, secure apps for all desktop platforms with Tauri"
edition = "2018"
exclude = [ "test/fixture/**" ]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_repr = "0.1"
dirs-next = "2.0.0"
zip = "0.5.9"
semver = "0.11"
tempfile = "3"
either = "1.6.1"
tar = "0.4"
flate2 = "1.0"
thiserror = "1.0.23"
rand = "0.8"
nfd = "0.0.4"
tauri-dialog = "0.1.0"
attohttpc = { version = "0.16.1", features = [ "json", "form" ] }
http = "0.2"
tauri-utils = { version = "0.5", path = "../tauri-utils" }
clap = { version = "=3.0.0-beta.2", optional = true }
notify-rust = { version = "4.2.2", optional = true }
once_cell = "1.5.2"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
cli = [ "clap" ]
notification = [ "notify-rust" ]
