[package]
name = "tauri-config-derive"
version = "0.1.0"
authors = ["chip reed <chip@chip.sh>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits"] }
tauri-config = { version = "0.1", path = "../tauri-config" }
tauri_includedir_codegen = { git = "https://github.com/chippers/tauri-includedir", branch = "tauri_no_build_env" }

