[package]
name = "tauri-config"
version = "0.1.0"
authors = ["chip reed <chip@chip.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri_includedir = { git = "https://github.com/chippers/tauri-includedir", branch = "tauri_no_build_env" }
