[package]
name = "tauri-config"
version = "0.1.0"
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>"
]
categories = [ "gui", "os", "filesystem", "web-programming" ]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Configuration used by the tauri crate."
edition = "2018"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri_includedir = { git = "https://github.com/chippers/tauri-includedir", branch = "tauri_no_build_env" }
