[package]
name = "tauri-macros"
version = "0.1.0"
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>"
]
categories = [ "gui", "os", "filesystem", "web-programming" ]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Macros for the tauri crate."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
flate2 = "1"
proc-macro2 = "1"
quote = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
syn = { version = "1", features = ["extra-traits"] }
tauri-api = { version = "0.7", path = "../tauri-api" }
walkdir = "2"
