[package]
name = "tauri-macros"
version = "0.1.0"
authors = [ "Tauri Community" ]
categories = [ "gui", "os", "filesystem", "web-programming" ]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Macros for the tauri crate."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = [ "full" ] }
tauri-codegen = { path = "../core/tauri-codegen" }

[features]
custom-protocol = []
