[package]
name = "tauri-update"
version = "0.2.0"
authors = ["Lucas Fernandes Gonçalves Nogueira <lucas@quasar.dev>", "Daniel Thompson-Yvetot <denjell@sfosc.org>"]
license = "MIT"
homepage = "https://tauri-apps.org"
repository = "https://github.com/tauri-apps/tauri"
description = "Make tiny, secure apps for all desktop platforms with Tauri"
edition = "2018"
exclude = ["test/fixture/**"]

[dependencies]
reqwest = "0.9"
hyper-old-types = "0.11.0"
pbr = "1"
serde_json = "1.0.44"
serde = "1.0"
serde_derive = "1.0"
zip = "0.5.3"
sysinfo = "0.10"
tempdir = "0.3"


tauri = { version = "0.2", path = "../tauri" }

[features]
test = ["tauri/test"]