[package]
name = "tauri-updater"
version = "0.5.0"
authors = ["Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>", "Daniel Thompson-Yvetot <denjell@sfosc.org>", "Tensor Programming <tensordeveloper@gmail.com>"]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Updater for Tauri"
edition = "2018"
exclude = ["test/fixture/**"]

[dependencies]
serde_json = "1.0"
tempfile = "3.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0"
tauri-api = { version = "0.5", path = "../tauri-api" }
tauri-utils = { version = "0.5", path = "../tauri-utils" }
log = "0.4.8"
semver = "0.9"

[features]
default = ["reqwest/default-tls"]

[package.metadata.docs.rs]
all-features = true