[package]
name = "tauri-updater"
version = "0.5.0"
authors = ["Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>", "Daniel Thompson-Yvetot <denjell@sfosc.org>", "Tensor Programming <tensordeveloper@gmail.com>", "David Lemarier <david@lemarier.ca>"]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Updater for Tauri"
edition = "2018"
exclude = ["test/fixture/**"]

[dependencies]
serde_json = "1.0"
tempfile = "3.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0"
tauri-api = { version = "0.5", path = "../tauri-api" }
tauri-utils = { version = "0.5", path = "../tauri-utils" }
semver = "0.9"
minisign-verify = "0.1.8"
base64 = "0.12.1"
boxfnonce = "0.1"

# error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
totems = "0.2.7"

[features]
default = ["reqwest/default-tls"]

[package.metadata.docs.rs]
all-features = true