[package]
name = "tauri-utils"
version = "0.5.0"
authors = ["Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>", "Daniel Thompson-Yvetot <denjell@sfosc.org>", "Tensor Programming <tensordeveloper@gmail.com>"]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Utilities for Tauri"
edition = "2018"


[dependencies]
sysinfo = "0.10"
anyhow = "1.0.31"
thiserror = "1.0.19"