[package]
name = "tauri-utils"
version = "0.5.1"
authors = ["Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>", "Daniel Thompson-Yvetot <denjell@sfosc.org>", "Tensor Programming <tensordeveloper@gmail.com>"]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Utilities for Tauri"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.10"
thiserror = "1.0.19"
phf = { version = "0.8", features = ["macros"] }
flate2 = "1"
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }

[features]
build = [ "proc-macro2", "quote" ]
