[package]
name = "tauri"
version = "0.11.1"
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>"
]
categories = [ "gui", "web-programming" ]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Make tiny, secure apps for all desktop platforms with Tauri"
edition = "2018"
exclude = [ "test/fixture/**" ]

[package.metadata.docs.rs]
features = [ "api-all" ]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
base64 = "0.13.0"
webbrowser = "0.5.5"
lazy_static = "1.4.0"
tiny_http = { version = "0.8", optional = true }
tokio = { version = "1.2", features = ["rt", "rt-multi-thread", "sync"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "0.8.2", features = [ "v4" ] }
thiserror = "1.0.23"
once_cell = "1.5.2"
tauri-api = { version = "0.7.5", path = "../tauri-api" }
wry = { git = "https://github.com/tauri-apps/wry", rev = "e6cc7f0825220a0117827b6f0a366f60ce7420ea" }
rand = "0.8"

# build only deps
anyhow = { version = "1", optional = true }
flate2 = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
walkdir = { version = "2", optional = true }

[target."cfg(target_os = \"windows\")".dependencies]
runas = "0.2"

[build-dependencies]
cfg_aliases = "0.1.1"

[dev-dependencies]
proptest = "0.10.1"
serde_json = "1.0"
tauri = { path = ".", features = [ "api-all" ] }
serde = { version = "1.0", features = [ "derive" ] }

[features]
build = [ "tauri-api/build", "anyhow", "flate2","proc-macro2", "quote", "walkdir" ]
cli = [ "tauri-api/cli" ]
embedded-server = [ "tiny_http" ]
api-all = [ "tauri-api/notification", "tauri-api/global-shortcut" ]
updater = [ ]

# FS
fs-all = [ ]
fs-read-text-file = [ ]
fs-read-binary-file = [ ]
fs-write-file = [ ]
fs-write-binary-file = [ ]
fs-read-dir = [ ]
fs-copy-file = [ ]
fs-create-dir = [ ]
fs-remove-dir = [ ]
fs-remove-file = [ ]
fs-rename-file = [ ]
fs-path-api = [ ]

# window
window-all = [ ]
window-create = [ ]

#shell
shell-all = [ ]
shell-execute = [ ]
shell-open = [ ]

# dialog
dialog-all = [ ]
dialog-open = [ ]
dialog-save = [ ]

# HTTP
http-all = [ ]
http-request = [ ]

# notification
notification-all = [ "tauri-api/notification" ]

# global shortcut
global-shortcut-all = [ "tauri-api/global-shortcut" ]

[[example]]
name = "communication"
path = "examples/communication/src-tauri/src/main.rs"

[[example]]
name = "multiwindow"
path = "examples/multiwindow/src-tauri/src/main.rs"
