[package]
name = "tauri"
version = "0.11.1"
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>"
]
categories = [ "gui", "web-programming" ]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Make tiny, secure apps for all desktop platforms with Tauri"
edition = "2018"
exclude = [ "test/fixture/**" ]

[package.metadata.docs.rs]
features = [ "api-all" ]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
base64 = "0.13.0"
lazy_static = "1.4.0"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "0.8.2", features = [ "v4" ] }
thiserror = "1.0.24"
once_cell = "1.7.2"
tauri-api = { version = "0.7.5", path = "../tauri-api" }
tauri-macros = { version = "0.1", path = "../tauri-macros" }
wry = { git = "https://github.com/tauri-apps/wry", rev = "8dd58eec77d4c89491b1af427d06c4ee6cfa8e58" }
rand = "0.8"

[build-dependencies]
cfg_aliases = "0.1.1"

[dev-dependencies]
proptest = "1.0.0"
serde_json = "1.0"
tauri = { path = ".", features = [ "api-all" ] }
serde = { version = "1.0", features = [ "derive" ] }

[features]
cli = [ "tauri-api/cli" ]
custom-protocol = [ ]
api-all = [ "tauri-api/notification", "tauri-api/global-shortcut" ]
updater = [ ]

# FS
fs-all = [ ]
fs-read-text-file = [ ]
fs-read-binary-file = [ ]
fs-write-file = [ ]
fs-write-binary-file = [ ]
fs-read-dir = [ ]
fs-copy-file = [ ]
fs-create-dir = [ ]
fs-remove-dir = [ ]
fs-remove-file = [ ]
fs-rename-file = [ ]
fs-path-api = [ ]

# window
window-all = [ ]
window-create = [ ]

#shell
shell-all = [ ]
shell-execute = [ ]
shell-open = [ ]

# dialog
dialog-all = [ ]
dialog-open = [ ]
dialog-save = [ ]

# HTTP
http-all = [ ]
http-request = [ ]

# notification
notification-all = [ "tauri-api/notification" ]

# global shortcut
global-shortcut-all = [ "tauri-api/global-shortcut" ]
