[package]
name = "proton-ui"
version = "1.0.0"
authors = ["Lucas Fernandes Gonçalves Nogueira <lucas@quasar.dev>", "Daniel Thompson-Yvetot <denjell@quasar.dev>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/quasarframework/proton"
description = "Rust bindings for proton, a toolchain for building more secure native apps that have tiny binaries and are very fast."
keywords = ["quasar", "web", "gui", "desktop", "webkit"]
categories = ["quasar", "gui", "web-programming", "api-bindings", "rendering", "visualization"]
edition = "2018"

[dependencies]
urlencoding = "1.0"
proton-sys = { path = "proton-sys", version = "0.1.0" }
boxfnonce = "0.1"

[features]
default = ["V1_30"]
V1_30 = []

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
