[package]
name = "tauri-ui"
version = "1.0.0"
authors = ["Lucas Fernandes Gonçalves Nogueira <lucas@quasar.dev>", "Daniel Thompson-Yvetot <denjell@sfosc.org>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/tauri-apps/tauri"
description = "Rust bindings for tauri, a toolchain for building more secure native apps that have tiny binaries and are very fast."
keywords = ["tauri", "web", "gui", "desktop", "webkit"]
categories = ["tauri", "gui", "web-programming", "api-bindings", "rendering", "visualization"]
edition = "2018"

[dependencies]
urlencoding = "1.0"
tauri-sys = { path = "tauri-sys", version = "1.0.0" }
boxfnonce = "0.1"

[features]
default = ["V1_30"]
V1_30 = []

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
