workspace = { }

[package]
name = "tauri-cli"
version = "0.1.0"
authors = [ "Lucas Nogueira <lucas@tauri.studio>" ]
edition = "2018"

[[bin]]
name = "cargo-tauri"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0-beta.2", features = [ "yaml" ] }
anyhow = "1.0"
tauri-bundler = { version = "0.9.4", path = "../tauri-bundler" }
colored = "2.0"
once_cell = "1.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
notify = "4.0"
shared_child = "0.3"
toml_edit = "0.2"
convert_case = "0.4"
json-patch = "0.2"
schemars = "0.8"
valico = "3.5"

[build-dependencies]
schemars = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[target."cfg(target_os = \"windows\")".dependencies]
which = "4.0"
