workspace = { }

[package]
name = "tauri-cli"
version = "0.1.0"
authors = [ "Lucas Nogueira <lucas@tauri.studio>" ]
edition = "2018"

[[bin]]
name = "cargo-tauri"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0-beta.2", features = [ "yaml" ] }
anyhow = "1.0"
tauri-bundler = { version = "0.9.4", path = "../tauri-bundler" }
colored = "2.0"
once_cell = "1.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_with = "1.8"
notify = "4.0"
shared_child = "0.3"
toml_edit = "0.2"
json-patch = "0.2"
schemars = "0.8"
toml = "0.5.8"
valico = "3.6"
handlebars = "3.5"
include_dir = "0.6"
dialoguer = "0.8"
ureq = "2.1"
os_info = "3.0"
semver = "0.11"
regex = "1.4"

[build-dependencies]
schemars = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_with = "1.8"

[target."cfg(target_os = \"linux\")".dependencies]
heck = "0.3"
