workspace = {}

[package]
name = "tauri-bundler"
version = "0.9.4"
authors = [
  "George Burton <burtonageo@gmail.com>",
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>"
]
categories = [ "command-line-utilities", "development-tools::cargo-plugins" ]
license = "MIT/Apache-2.0"
keywords = [ "bundle", "cargo", "tauri" ]
repository = "https://github.com/tauri-apps/tauri"
description = "Wrap rust executables in OS-specific app bundles for Tauri"
edition = "2018"

[dependencies]
ar = "0.8.0"
chrono = "0.4"
dirs-next = "2.0.0"
glob = "0.3.0"
icns = "0.3"
image = "0.23.13"
libflate = "1.0"
md5 = "0.7.0"
minisign = "0.5.19"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
strsim = "0.10.0"
tar = "0.4"
termcolor = "1.1.2"
toml = "0.5.8"
walkdir = "2"
lazy_static = { version = "1.4" }
base64 = "0.12.1"
handlebars = { version = "3.5" }

[target."cfg(target_os = \"windows\")".dependencies]
attohttpc = { version = "0.16.3" }
regex = { version = "1" }
uuid = { version = "0.8", features = [ "v5" ] }

[target."cfg(not(target_os = \"linux\"))".dependencies]
zip = { version = "0.5" }
sha2 = { version = "0.9" }
hex = { version = "0.4" }

[dev-dependencies]
tempfile = "3"
totems = "0.2.7"
# used to make sure our signature/validation works together
tauri-updater = { version = "0.5",  path = "../../tauri-updater" }


[lib]
name = "tauri_bundler"
path = "src/lib.rs"
