[package]
name = "tauri-cli"
version = "0.1.1"
authors = ["George Burton <burtonageo@gmail.com>", "Lucas Fernandes Gonçalves Nogueira <lucas@quasar.dev>", "Daniel Thompson-Yvetot <denjell@sfosc.org>"]
license = "MIT/Apache-2.0"
keywords = ["bundle", "cargo", "tauri"]
repository = "https://github.com/tauri-apps/tauri"
description = "Wrap rust executables in OS-specific app bundles for Tauri"
edition = "2018"

[dependencies]
ar = "0.8.0"
chrono = "0.4"
clap = "^2"
dirs = "2.0.2"
error-chain = "0.12"
glob = "0.3.0"
icns = "0.3"
image = "0.22.3"
libflate = "0.1"
md5 = "0.7.0"
msi = "0.2"

serde = "1.0"
serde_derive = "1.0"
strsim = "0.9.2"
tar = "0.4"
target_build_utils = "0.3"
term = "0.6.1"
toml = "0.5.5"
uuid = { version = "0.8", features = ["v5"] }
walkdir = "2"

sha2 = "0.8"
lazy_static = "1.4"
handlebars = "2.0"
reqwest = "0.9.22"
hex = "0.4"
zip = "0.5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "cargo-tauri-cli"
path = "src/main.rs"
