[package]
name = "config-schema"
version = "0.0.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-utils = { path = "../tauri-utils", features = [ "schema" ] }
schemars = { version = "0.8", features = [ "url", "preserve_order" ] }
serde.workspace = true
serde_json.workspace = true
serde_with = "1.12"
url.workspace = true
